--- a/public/locales/de/global.json
+++ b/public/locales/de/global.json
@@ -17,7 +17,7 @@
 
         "rider": "Technischer Rider",
         "pianoTech1": "2 Weitbereich-Mikrofone", 
-        "pianoTech2": "Two full spectrum microphones (si querés dejar solo una línea en DE podés repetir o dejar vacía en cada idioma)",
+        "pianoTech2": "Two full spectrum microphones",
         "celloTech1": "Best: contact condenser microphone (DPA)",
         "celloTech2": "Medium: Shure 57",
         "bandoneonTech1": "1 Mikrofon pro Hand",
