Changes in Rider

--- a/public/locales/de/global.json
+++ b/public/locales/de/global.json
@@ -24,7 +24,7 @@
         "bandoneonTech2": "Shure 57 (links) / Shure 58 (rechts)",
         "guitarTech1": "Klarer Verstärker mit Hall (ähnlich Jazz Chorus)",
         "guitarTech2": "+ Shure 57 Mikrofon",
-        "monitorsCaption": "Mindestens 2 Bühnenmonitore / Two minimum return monitors",
+        "monitorsCaption": "Mindestens 2 Bühnenmonitore",
         
         "instruments": "Instrumente",
         "requirements": "Anforderungen",
